--- a/portfolio.html
+++ b/portfolio.html
@@ -38,18 +38,22 @@
     
       <div id="backgroundPic"></div>
       <div id = "box">
-          <div class = "Tic-Tac-Toe">
+          <!-- <div class = "Tic-Tac-Toe">
+            <img src = "assets/images/tictactoe.jpg" width = "200" height = "200">
             <p>Tic Tac Toe</p>
-          </div>
-          <br>
+          </div> -->
           <div class = "Guessing-Game">
+            <img src = "assets/images/guessinggame.jpg" width = "200" height = "200">
             <p>Guessing Game</p>
           </div>
-          <br>
           <div class = "Trivia">
+            <img src = "assets/images/trivia.jpg" width = "200" height = "200">
             <p>Trivia Game</p>
           </div>
-          <br>
+          <div class = "RPS">
+            <img src = "assets/images/rps.jpg" width = "200" height = "200">
+            <p>Rock Paper Scissors</p>
+          </div>
       </div>
 
 </body>
