--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,10 @@
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
       </form>
+      <button type="submit" class="btn btn-primary">Submit</button>
       </div>
 
-      <button type="submit" class="btn btn-primary">Submit</button>
-      
+      <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
+
 </body>
 </html>
